# 2019_QUT_DAAD_DEMO

./: .gitmodules  LICENSE  README.md  init.sh
catkin_ws/: run.py
catkin_ws/movie/: cube_pitch_000_yaw_000.bag  cube_pitch_000_yaw_001.bag  cube_pitch_000_yaw_002.bag  cube_pitch_000_yaw_003.bag  cube_pitch_000_yaw_004.bag  cube_pitch_000_yaw_005.bag  cube_pitch_000_yaw_006.bag  cube_pitch_000_yaw_007.bag  cube_pitch_000_yaw_008.bag  cube_pitch_000_yaw_009.bag  cube_pitch_000_yaw_010.bag  cube_pitch_000_yaw_011.bag  cube_pitch_000_yaw_012.bag  cube_pitch_000_yaw_013.bag  cube_pitch_000_yaw_014.bag  cube_pitch_000_yaw_015.bag  cube_pitch_000_yaw_016.bag  cube_pitch_000_yaw_017.bag  cube_pitch_000_yaw_018.bag  cube_pitch_000_yaw_019.bag  cube_pitch_000_yaw_020.bag  cube_pitch_000_yaw_021.bag  cube_pitch_000_yaw_022.bag  cube_pitch_000_yaw_023.bag  cube_pitch_000_yaw_024.bag  cube_pitch_000_yaw_025.bag  cube_pitch_000_yaw_026.bag  cube_pitch_000_yaw_027.bag  (+153 more)
catkin_ws/src/rubiks_description/: CMakeLists.txt  package.xml
catkin_ws/src/rubiks_description/launch/: cube.launch
catkin_ws/src/rubiks_description/urdf/: camera.xacro  materials.xacro  rubiks_cube.gazebo  rubiks_cube.xacro  rubiks_cube_no_mesh.xacro
media/: img_0.mov  img_pitch_-pi2.mov  img_pitch_pi2.mov  img_roll_-pi2.mov  img_roll_pi.mov  img_roll_pi2.mov
notebooks/: ICM_rubiks_simple.ipynb  VAE_rubiks_feature_extractor.ipynb  VAE_rubiks_feature_extractor_simple.ipynb
patches/: 000-add_gui_args.diff  001-fix-robot_control_node-to-publish-in-desired-frame.diff  002-add-legacyModeNS.patch  run.sh
(+21 files in other folders)
